# mrater

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  pyproject.toml
mrater/: data.py  item.py
templates/: done.html  index.html  start.html
