[tool.poetry]
name = "mrater"
version = "0.1.0"
description = "Template project for movie ratings"
authors = ["Dim L. Feiron <norefle@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
gunicorn = "^19.9"
uuid = "^1.30"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
flake8 = "^3.7"
black = "=19.03b"

[tool.black]
line-length = 100
target-version = ["py37"]
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
